<resources xmlns:xliff="urn:oasis:names:en:xliff:document:1.2">
    <string name="app_name_release">Trime</string>
    <string name="app_name_debug">Trime (Debug)</string>
    <string name="settings__help_title">Help</string>
    <string name="pref_wiki">Wiki</string>
    <string name="pref_issues">Report Issues</string>
    <string name="pref_trime_qq">Trime QQ Group 1</string>
    <string name="pref_trime_qq2">Trime QQ Group 2</string>
    <string name="pref_rime_qq">Rime QQ Group</string>
    <string name="pref_market">Google Play</string>
    <string name="about__donation_title">Donate</string>
    <string name="about__donation_summary">Use Alipay to support Trime and PRIME</string>
    <string name="settings__about_title">About</string>
    <string name="about__librime_version">Rime Version</string>
    <string name="about__opencc_version">OpenCC Version</string>
    <string name="about__changelog">Change Log</string>
    <string name="about__license">License</string>
    <string name="pref_credits">Contribute</string>
    <string name="about__product_prime">Win10 PRIME Platform</string>
    <string name="about__privacy_policy">Privacy Policy</string>
    <string name="about__build_info_format">Builder: %1$s\nGit Repo: %2$s\nBuild Git Hash: %3$s\nBuild Time: %4$s</string>
    <string name="pref_enable">Enable</string>
    <string name="pref_enable_summary">Enable Trime</string>
    <string name="pref_select">Change Keyboard</string>
    <string name="pref_select_summary">Select Trime</string>
    <string name="looks__selected_theme_title">Themes</string>
    <string name="looks__selected_theme_summary">Select Desired Theme</string>
    <string name="pref_themes_name_tongwenfeng">Tongwenfeng</string>
    <string name="pref_themes_name_trime">Default</string>
    <string name="pref_select_schemas">Select schemas</string>
    <string name="pref_select_schemas_summary">Enable or disable schema(s) and then deploy</string>
    <string name="looks__selected_color_title">Colors</string>
    <string name="looks__selected_color_summary">Select Desired Color for Keyboard</string>
    <string name="profile_reset">Reset</string>
    <string name="profile_reset_summary">Overwrite the same files in shared directory with default built-in assets</string>
    <string name="keyboard__key_sound_title">Sound on keypress</string>
    <string name="keyboard__key_sound_volume_title">Sound volume on key press</string>
    <string name="keyboard__key_vibration_title">Vibrate on key press</string>
    <string name="keyboard__key_vibration_duration_title">Vibration length on key press</string>
    <string name="keyboard__key_vibration_amplitude_title">Vibration amplitude on key press</string>
    <string name="unit__time_ms">ms</string>
    <string name="keyboard__speak_key_press_title">Voice on key press</string>
    <string name="keyboard__speak_key_commit_title">Voice on commit</string>
    <string name="keyboard__long_press_timeout_title">Long key press delay</string>
    <string name="keyboard__key_repeat_interval_title">Key repeat interval</string>
    <string name="keyboard__delete_candidate_timeout_title">Long click to delete candidate timeout</string>
    <string name="keyboard__long_click_delete_candidate_title">Long click to delete candidate</string>
    <string name="keyboard__show_switches_title">Show switches in candidate bar</string>
    <string name="keyboard__show_key_popup_title">Popup on key press</string>
    <string name="keyboard__show_window_title">Show floating window when composing</string>
    <string name="keyboard__inline_preedit_title">Composing text in editor</string>
    <string-array name="keyboard__inline_entries">
        <item>Preview</item>
        <item>Composition</item>
        <item>Input</item>
        <item>None</item>
    </string-array>
    <string-array name="keyboard__split_entries">
        <item>Never</item>
        <item>Only in landscape mode</item>
        <item>Auto (In wide screen or landscape mode)</item>
        <item>Always</item>
    </string-array>
    <string-array name="other__ui_mode_entries" >
        <item name="auto">System Default</item>
        <item name="light">Light</item>
        <item name="dark">Dark</item>
    </string-array>
    <string name="keyboard__soft_cursor_title">Use soft cursor(^) in composition</string>
    <string name="pref_deploy">Deploy</string>
    <string name="pref_deploy_summary">Gotta Deploy after Modifying Settings </string>
    <string name="profile_sync_user_data">Sync user data</string>
    <string name="profile_sync_user_data_summary">Backup config files and user dict sync</string>
    <string name="reset_success">Reset Succeeded!</string>
    <string name="reset_failure">Reset Failed!</string>
    <string name="deploy_progress">Deploying…</string>
    <string name="sync_progress">Syncing…</string>
    <string name="themes_progress">Applying theme…</string>
    <string name="schemas_progress">Loading schemas…</string>
    <string name="set_ime">Preferences</string>
    <string name="no_schemas">Put default.yaml and schema files into user directory!</string>
    <string name="other_ime">Other IMEs</string>
    <string name="other__ui_mode_title">Night Mode</string>
    <string name="pref_other">Others</string>
    <string name="other__show_status_bar_icon_title">Show icon in notification bar</string>
    <string name="other__destroy_on_quit_title">Free memory on quit</string>
    <string name="profile_shared_data_dir">Shared directory</string>
    <string name="profile_user_data_dir">User directory</string>
    <string name="profile_sync_in_background">Sync in background</string>
    <string name="profile_last_sync_in_background">Last sync in background: %1$s\nStatus: %2$s</string>
    <string name="profile_never_sync_in_background">Never synced in the background</string>
    <string name="profile_enable_syncing_in_background">Click to enable</string>
    <string name="profile_timing_sync">Timing sync</string>
    <string name="profile_timing_sync_trigger_time">Timing sync is enabled Next sync at time: %1$s</string>
    <string name="profile_enable_timing_sync">Click to enable</string>
    <string name="pref_help__marketplace">Marketplace</string>
    <string name="pref_help__user_community">User Community</string>
    <string name="pref_keyboard__function">View</string>
    <string name="pref_keyboard__effect">Keypress Effect</string>
    <string name="pref__draw_overlays_tip_title">Display Over Other Apps</string>
    <string name="other__show_app_icon_title">Show app icon in launcher</string>
    <string name="other__show_app_icon_on_summary">This option is only available on some ROMs</string>
    <string name="other__show_app_icon_off_summary">In some ROMs, you will still see this icon in the launcher and may go to the system\'s app information page after tapping it</string>
    <string name="pref__default">Default</string>
    <string name="clipboard_clipboard_limit">Clipboard History Limit</string>
    <string name="clipboard_clipboard_compare_title">Clipboard Compare Rules</string>
    <string name="clipboard_clipboard_output_title">Clipboard Output Rules</string>
    <string name="other__clipboard_manager_summary">Number of clipboard saved items</string>
    <string name="keyboard__show_switche_arrow_title">Show arrow for switch (→)</string>
    <string name="keyboard__fullscreen_mode_title">Landscape fullscreen input</string>
    <string name="deploy_finish">Deploy finish</string>
    <string-array name="keyboard__fullscreen_mode_entries">
        <item>auto_show</item>
        <item>always_show</item>
        <item>never_show</item>
    </string-array>
    <string name="speech__error_audio">Error on recording</string>
    <string name="speech__error_client">Error on client</string>
    <string name="speech__error_insufficient_permissions">Insufficient permission</string>
    <string name="speech__error_network">Error on network</string>
    <string name="speech__error_network_timeout">Network timeout</string>
    <string name="speech__error_no_match">Unable to recognize</string>
    <string name="speech__error_recognizer_busy">Recognizer is busy</string>
    <string name="speech__error_server">Error on server</string>
    <string name="speech__error_unknown">Unknown error</string>
    <string name="speech__error_speech_timeout">No voice detected</string>
    <string name="about__app_info">App Information</string>
    <string name="about__licensing">Licensing</string>
    <string name="about__support">Support</string>
    <string name="about__open_source_licenses">Open Source Licenses</string>
    <string name="pref__system_default">System Default</string>
    <string name="keyboard__key_swipe_travel_title">Min travel for gesture</string>
    <string name="keyboard__hook_candidate">Click candidate</string>
    <string name="keyboard__hook_candidate_commit">Send Space when click candidate (coming soon)</string>
    <string name="trime_app_slogan">Trimes with Your Keystrokes</string>
    <string name="external_storage_access_required">Trime needs to access external storage to deploy or read schemas and config, tap OK to grant the permission.</string>
    <string name="external_storage_permission_not_available">External storage permission is not available</string>
    <string name="external_storage_permission_granted">External storage permission is granted</string>
    <string name="external_storage_permission_denied">External storage permission was denied, deployment or reading schemas and config may not be available</string>
    <string name="alert_window_access_required">Trime needs alert window permission to show up popup window or dialog, tap OK to grant the permission.</string>
    <string name="keyboard__key_sound_package_title">Key Sound Package</string>
    <string name="sound_progress">Loading sound...</string>
    <string name="clipboard_draft_limit">Draft History Limit</string>
    <string name="clipboard_draft_output_title">Draft Filter</string>
    <string name="setup__next">Next</string>
    <string name="setup__done">Done</string>
    <string name="setup__enable_ime_hint">Enable <b>Trime</b> in Language and input settings</string>
    <string name="setup__select_ime_hint">Select <b>Trime</b> as your default input method</string>
    <string name="setup__enable_ime">Enable Input Method</string>
    <string name="setup__select_ime">Select Input Method</string>
    <string name="setup__prev">Prev</string>
    <string name="setup__channel_hint">Trime Setup Wizard</string>
    <string name="setup__notify_hint">Finish setting up the keyboard</string>
    <string name="setup__step_one">Step 1</string>
    <string name="keyboard__auto_dark_title">Auto change dark/light color scheme</string>
    <string name="keyboard__use_mini_keyboard_title">Show mini keyboard with real keyboard attached</string>
    <string name="clear">Clear Screen</string>
    <string name="export">Export</string>
    <string name="scroll_to_bottom">Jump to Bottom</string>
    <string name="pref_toolkit">Toolkit</string>
    <string name="pref_profile">Profile</string>
    <string name="pref_keyboard">Keyboard settings</string>
    <string name="pref_theme_and_color"><![CDATA[Theme & Color]]></string>
    <string name="storage">Storage</string>
    <string name="maintenance">Maintenance</string>
    <string name="pref_profile_summary">Define storage locations and change sync settings, etc.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="collect">Collect</string>
    <string name="liquid_keyboard_search_hint">Search ( comming soon )</string>
    <string name="clipboard">Clipboard</string>
    <string name="disable">Disbale</string>
    <string name="pref_clipboard_summary">Collection and draft are also managed here</string>
    <string name="a_regular_expression_per_line">A regular expression per line</string>
</resources>