<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2015 - 2024 Rime community

SPDX-License-Identifier: GPL-3.0-or-later
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/trime_app_name">

    <Preference android:key="pref_schemata"
        android:title="@string/schemata"
        app:icon="@drawable/ic_pref_schema"
        android:summary="@string/schemata_hint"/>

    <Preference android:key="pref_user_data"
        android:title="@string/pref_profile"
        app:icon="@drawable/ic_baseline_snippet_folder_24"
        android:summary="@string/pref_profile_summary"/>

    <Preference android:key="pref_keyboard"
        android:title="@string/pref_keyboard"
        app:icon="@drawable/ic_baseline_keyboard_24" />

    <Preference android:key="pref_theme_and_color"
        android:title="@string/pref_theme_and_color"
        app:icon="@drawable/ic_pref_theme_color" />

    <Preference android:key="pref_clipboard"
        android:title="@string/clipboard"
        android:summary="@string/pref_clipboard_summary"
        app:icon="@drawable/ic_baseline_assignment_24"/>

    <Preference android:key="pref_toolkit"
        android:title="@string/pref_toolkit"
        app:icon="@drawable/ic_iconpark_toolkit_24" />

    <Preference android:key="pref_others"
        android:title="@string/pref_other"
        app:icon="@drawable/ic_pref_other" />

</PreferenceScreen>
