<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:key="theme_selected_theme"
        app:iconSpaceReserved="false"
        android:title="@string/looks__selected_theme_title"
        android:summary="@string/looks__selected_theme_summary" />
    <Preference android:key="theme_selected_color"
        app:iconSpaceReserved="false"
        android:title="@string/looks__selected_color_title"
        android:summary="@string/looks__selected_color_summary" />
    <SwitchPreferenceCompat android:key="theme_auto_dark"
        app:iconSpaceReserved="false"
        android:title="@string/keyboard__auto_dark_title"
        android:defaultValue="false"/>
    <SwitchPreferenceCompat android:key="theme_use_mini_keyboard"
        app:iconSpaceReserved="false"
        android:title="@string/keyboard__use_mini_keyboard_title"
        android:defaultValue="false"/>
</PreferenceScreen>