<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2015 - 2024 Rime community

SPDX-License-Identifier: GPL-3.0-or-later
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/clipboard" >

    <PreferenceCategory android:key="clipboard_clipboard"
        app:iconSpaceReserved="false"
        app:title="@string/clipboard">
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            app:key="clipboard_clipboard_limit"
            android:defaultValue="10"
            app:iconSpaceReserved="false"
            app:max="100"
            app:systemDefaultValue="0"
            app:systemDefaultValueText="@string/disable"
            app:title="@string/clipboard_clipboard_limit"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference android:key="clipboard_clipboard_compare"
            app:iconSpaceReserved="false"
            android:title="@string/clipboard_clipboard_compare_title"
            android:defaultValue=""
            android:dialogMessage="@string/a_regular_expression_per_line"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference android:key="clipboard_clipboard_output"
            app:iconSpaceReserved="false"
            android:title="@string/clipboard_clipboard_output_title"
            android:dialogMessage="@string/a_regular_expression_per_line"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="clipboard_suggestion"
            android:title="@string/clipboard_suggestion"
            app:iconSpaceReserved="false" />

        <com.osfans.trime.ui.components.DialogSeekBarPreference
            app:key="clipboard_suggestion_timeout"
            android:defaultValue="20"
            app:iconSpaceReserved="false"
            app:max="100"
            app:systemDefaultValue="0"
            app:systemDefaultValueText="@string/disable"
            app:title="@string/clipboard_suggestion_timeout"
            app:useSimpleSummaryProvider="true"
            app:unit="s" />
    </PreferenceCategory>

</PreferenceScreen>
